# alc

./: LICENSE  README.md
alc_ros/: .gitignore  CMakeLists.txt  LICENSE  package.xml
alc_ros/launch/: record_rosbag.launch  ros_timeout.launch
alc_ros/msg/: AssuranceMonitorConfidence.msg  AssuranceMonitorConfidenceStamped.msg
alc_ros/templates/: assurance_monitor_node.py
alc_utils/: __init__.py  alc_model_updater.py  archive_bluerov2_standalone.py  bluerov2_standalone_build.sh  build_alc_core.py  build_bluerov2_standalone.py  check_docker_status.py  common.py  data_types.py  execution_runner.py  file_downloader.py  file_uploader.py  network_interface.py  network_predictor.py  network_trainer.py  rl_agent.py  rl_environment.py  setup_alc_core.py  setup_bluerov2_standalone.py  setup_repo.py  slurm_executor.py  update_job_status_daemon.py
alc_utils/LaunchActivity/: ActivityInterpreterBase.py  KeysAndAttributes.py
alc_utils/assurance_monitor/: __init__.py  assurance_monitor.py  assurance_monitor_lrp.py  assurance_monitor_salmap.py  assurance_monitor_selective_classification.py  assurance_monitor_svdd.py  assurance_monitor_vae.py  assurance_monitor_vae_io_regression.py  assurance_monitor_vae_regression.py  deep_lrp_torch.py  deep_salmap_torch.py  deep_selective_classification.py  deep_svdd.py  deep_vae.py  deep_vae_io_regression.py  deep_vae_regression.py  detector.py  icad_lrp_torch.py  icad_salmap_torch.py  icad_selective_classification.py  icad_svdd.py  icad_vae.py  icad_vae_io_regression.py  icad_vae_regression.py  martingales.py  multi_assurance_monitor.py  pCombination.py  saliency_generator_lrp.py  selective_classification_config.py  selective_classification_functions.py
alc_utils/assurancecasetools/: .gitignore  LICENSE.md  MANIFEST.in  README.md  setup.py
alc_utils/config/: __init__.py  base_config.py  config_util.py  file_management_defaults.py  sftp_default_config.json  sftp_default_docker_config.json  slurm_execution_defaults.py  training_defaults.py
alc_utils/datasets/: __init__.py  dataset_csv.py  dataset_png.py  dataset_rosbag.py  dataset_rosbag_hdf5.py  skeleton.py
alc_utils/docker/: create_repo.sh  repo_build_template.sh  run_assurance.sh  run_assurance_gen.sh  start_dind.sh  start_dind1.sh  start_dind_test.sh  stop_dind.sh
alc_utils/ml_library_adapters/: __init__.py  keras_library_adapter.py  library_adapter_base.py  pytorch_semseg_adapter.py
alc_utils/resonate/: .gitignore  README.md  setup.py
alc_utils/routines/: ALCJobRunner.py  ALCVerificationJobRunner.py  compute_bluerov_metrics.py  compute_resonate_stats.py  config_generator.py  nodeEnv.py  plot_bluerov_results.py  plot_training_results.py  run_expt.py  run_training.py  setup.py  verDep.py  (+8 more)
bluerov2_standalone/: .gitignore  README.md  build.sh  setup_ide.sh
bluerov2_standalone/catkin_ws/src/rtreach/: CMakeLists.txt  config_file_format  iver_strings.txt  package.xml  replace_iver.sh
bluerov2_standalone/catkin_ws/src/rtreach/benchmarking/uncertainty_experiments/: UncertaintyExperiments.ipynb  uncertainty_0_0_0_0_-0.01_0.01_-0.01_0.01_0.csv  uncertainty_0_0_0_0_-0.01_0.01_0_0_0.csv  uncertainty_0_0_0_0_-0.02_0.02_-0.02_0.02_0.csv  uncertainty_0_0_0_0_-0.02_0.02_0_0_0.csv  uncertainty_0_0_0_0_-0.03_0.03_-0.03_0.03_0.csv  uncertainty_0_0_0_0_-0.03_0.03_0_0_0.csv  uncertainty_0_0_0_0_-0.04_0.04_-0.04_0.04_0.csv  uncertainty_0_0_0_0_-0.04_0.04_0_0_0.csv  uncertainty_0_0_0_0_-0.05_0.05_-0.05_0.05_0.csv  uncertainty_0_0_0_0_-0.05_0.05_0_0_0.csv  uncertainty_0_0_0_0_-0.1_0.1_0_0_0.csv  uncertainty_0_0_0_0_0_0_-0.01_-0.01_0.csv  uncertainty_0_0_0_0_0_0_-0.01_0.01_0.csv  uncertainty_0_0_0_0_0_0_-0.02_0.02_0.csv  uncertainty_0_0_0_0_0_0_-0.03_0.03_0.csv  uncertainty_0_0_0_0_0_0_-0.04_0.04_0.csv  uncertainty_0_0_0_0_0_0_-0.05_0.05_0.csv  uncertainty_0_0_0_0_0_0_-0.1_0.1_0.csv  uncertainty_0_0_0_0_0_0_0_0_0.025.csv  uncertainty_0_0_0_0_0_0_0_0_0.05.csv  uncertainty_0_0_0_0_0_0_0_0_0.075.csv  uncertainty_0_0_0_0_0_0_0_0_0.1.csv  uncertainty_0_0_0_0_0_0_0_0_0.125.csv  uncertainty_0_0_0_0_0_0_0_0_0.15.csv  uncertainty_0_0_0_0_0_0_0_0_0.175.csv  uncertainty_0_0_0_0_0_0_0_0_0.2.csv  uncertainty_0_0_0_0_0_0_0_0_0.225.csv  uncertainty_0_0_0_0_0_0_0_0_0.25.csv  uncertainty_0_0_0_0_0_0_0_0_0.csv
bluerov2_standalone/catkin_ws/src/rtreach/msg/: interval.msg
bluerov2_standalone/catkin_ws/src/rtreach/reach_src/: bicycle_model_degraded.c  bicycle_model_degraded.h  bicycle_model_disturbance.c  bicycle_model_disturbance.h  bicycle_model_dynamic_vis.c  bicycle_model_parametrizeable.c  bicycle_model_uncertainty.c  bicycle_model_uncertainty_rov.c  dynamics_bicycle_model.c  dynamics_bicycle_model_degraded.c  dynamics_bicycle_model_degraded.h  dynamics_bicycle_model_disturbance.c  dynamics_bicycle_model_disturbance.h  dynamics_bicycle_model_iver.c  dynamics_bicycle_uncertainty.c  dynamics_bicycle_uncertainty.h  dynamics_bicycle_uncertainty_rov.c  dynamics_blue_rov.c  dynamics_uuv.h  dynamics_uuv_model.c  dynamics_uuv_model.h  face_lift.h  face_lift_degraded.c  face_lift_disturbance.c  face_lift_obstacle.c  face_lift_parametrizeable.c  face_lift_uuv_dynamic.c  face_lift_uuv_model.c  face_lift_uuv_visualization.c  face_lifting_bicycle_uncertainty.c  geometry.h  main.c  main_dynamic.c  main_test.c  main_vis.c  obstacle_test.cpp  plot_uuv.gnuplot  simulate_uuv.c  simulate_uuv.h  simulate_uuv_plots.c  (+10 more)
bluerov2_standalone/catkin_ws/src/rtreach/src/: benchmarking_node.cpp  geofencing_bounding_box.py  kill_simulation.py  plot_reachability_results.py  publish_obstacles.py  reach_node_blue_rov.cpp  reach_node_blue_rov_bicycle.cpp  reach_node_iver.cpp  reach_node_uncertain.cpp  reach_node_uncertain_rov.cpp  vandy_sys_id.py  vandy_sys_id_higher_hz.py  visualize_obstacle.cpp  visualize_reachset.cpp  visualize_reachset_blue_rov.cpp  visualize_reachset_blue_rov_bicycle.cpp  visualize_reachset_iver_bicycle.cpp
bluerov2_standalone/catkin_ws/src/rtreach/srv/: obstacle_list.srv
docker/: README.md
gradle/: build.gradle.kts  gradle.properties  setting.gradle.kts
verivital/: .gitignore  README.md
webgme/: .gitignore  README.md
(+1495 files in other folders)
