<?xml version="1.0"?>
<package format="2">
  <name>alc_ros</name>
  <version>0.0.1</version>
  <description>Common ALC utilities for ROS.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="charles.a.hartsell@vanderbilt.edu">Charles Hartsell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <url type="website">https://alc.isis.vanderbilt.edu</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="charles.a.hartsell@vanderbilt.edu">Charles Hartsell</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <!--  ALC Dependencies-->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!--<build_depend>uuv_simulation_evaluation</build_depend>-->
  <!--<build_depend>uuv_simulation_wrapper</build_depend>-->
  <!--<build_depend>uuv_control_utils</build_depend>-->
  <build_depend>message_generation</build_depend>
  <!--<build_export_depend>eca_a9_control</build_export_depend>-->
  <!--<build_export_depend>eca_a9_description</build_export_depend>-->
  <!--<build_export_depend>roscpp</build_export_depend>-->
  <!--<build_export_depend>rospy</build_export_depend>-->
  <!--<build_export_depend>std_msgs</build_export_depend>-->
  <!--<build_export_depend>uuv_simulation_evaluation</build_export_depend>-->
  <!--<build_export_depend>uuv_simulation_wrapper</build_export_depend>-->
  <!--<build_export_depend>uuv_control_utils</build_export_depend>-->
<!--  <exec_depend>eca_a9_control</exec_depend>-->
<!--  <exec_depend>eca_a9_description</exec_depend>-->
<!--  <exec_depend>uuv_simulation_evaluation</exec_depend>-->
<!--  <exec_depend>uuv_simulation_wrapper</exec_depend>-->
<!--  <exec_depend>uuv_control_utils</exec_depend>-->
  <!-- <exec_depend>uuv_bag_evaluation</exec_depend> -->
<!--  <exec_depend>gazebo_ros</exec_depend>-->
<!--  <exec_depend>gazebo_ros_control</exec_depend>-->
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
<!--    <gazebo_ros gazebo_media_path="${prefix}/models"-->
<!--                gazebo_model_path="${prefix}/models"/>-->
  </export>
</package>
